# s4proj

./: GitRules  README.md
BioGuard/: Cargo.toml  build.rs
BioGuard/src/: lib.rs  main.rs
BioGuard/src/extractor/: extractor.rs  mod.rs
BioGuard/src/minutia_extractor/: mod.rs
BioGuard/src/minutia_extractor/extractor/: extractor.rs
BioGuard/src/minutia_extractor/postprocessing/: postprocessing.rs
BioGuard/src/minutia_extractor/preprocessing/: preprocessing.rs
Fingerprint/: build.bat  fingerprintCapture.cpp  fingerprint_capture.h  helloworld.cpp
Fingerprint/lib/: headers.h
UI/: Cargo.toml  users.db  users.db-shm  users.db-wal
UI/migrations/00000000000000_create_users/: db.sql
UI/src/: database.rs  extractor.rs  main.rs  models.rs
Website/: downloads.html  index.html  links.html  members.html  project.html
Website/css/: styles.css
