[package]
name = "soutenance2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
time = "0.3.36"
druid = "0.8.3"
sqlx = { version = "0.5.7", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
